--- a/learning.html
+++ b/learning.html
@@ -10,7 +10,7 @@
   <header>
     <nav class="navbar">
       <div class="logo">
-        <img src="assets/logo.png" alt="HAIL Logo" />
+        <img src="logo.png" alt="HAIL Logo" />
         <h1>HAIL</h1>
       </div>
       <div class="hamburger" id="hamburger">&#9776;</div>
