--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <li><a href="#applications">Applications</a></li>
         <li><a href="#contact">Contact</a></li>
         <li><a href="learning.html">Learning Hub</a></li>
+        <li><a href="ai-for-teachers.html">AI for Teachers</a></li>
       </ul>
     </nav>
   </header>
